# shahab-engine-3d

./: .gitignore  CMakeLists.txt  readme  todo  vendor_imgui_setup.sh
include/: Camera.h  Mesh.h  Shaders.h  model.h
include/core/: Application.h  Window.h
include/gui/: ImguiLayer.h
include/input/: Input.h
include/renderer/: Renderer.h  Shaders.h
include/scene/: Camera.h  Mesh.h  Model.h  Scene.h  Skybox.h  TextureLoader.h
shaders/: default.frag  default.vert  simple_color.frag  simple_color.vert  skybox.vert
src/: Camera.cc  Main.cc  Mesh.cc  Model.cc  Shaders.cc
src/core/: Application.cc  Window.cc
src/gui/: ImguiLayer.cc
src/input/: Input.cc
src/renderer/: Renderer.cc  Shaders.cc
src/scene/: Camera.cc  Mesh.cc  Model.cc  Scene.cc  Skybox.cc  TextureLoader.cc
